Add core pool size, queue capacity, tasks in queue, max pool size, keep alive time, largest pool size to printThreadInfo in Utils. Reuse printThreadInfo for ThreadPoolTaskExecutor case. Replace the deprecated Thread.getId() with Thread.threadId()